# sandbox

./: .swo  .swp  Sandbox.iml.save  file1.txt  file2.txt  file3.txt  file4.txt  package-lock.json  pico.save
src/: Foo.java  JavaDocTest.java  Main.java  blah.yaml  chrome___dino_.html  conflict.txt  jetbrains_com.html  nano.6760.save  sample.md
src/floating/toolbar/: blah.json  blah.kt  chrome___dino_.html
src/terminal/java/: Crash.java  InputTest.java  OutputTest.java  TypeAlphabet.java  TypeNumbers.java
src/terminal/misc/: tabs_test.php  terminal_startup_env_vars.txt
src/terminal/python_scripts/: ooeeeaaa_cat.py  print_date.py
src/terminal/sandbox/: Crash.java  InputTest.java  OutputTest.java  TypeAlphabet.java  TypeNumbers.java  alternative_buffer_focus_test.sh  bazeltest.bazel  color_test.ps1  colortest.sh  focus_test.sh  inlay.sh  puk.sh  random_emiji.sh  random_emoji.ps1  random_emoji.sh  separators.txt  snake.sh  spinner.ps1  spinner.sh  synchronized_output.sh  terminal launch command  test_hyperlinks.txt  vt100.sh
src/terminal/sandbox/java/: Crash.java  InputTest.java  OutputTest.java  TypeAlphabet.java  TypeNumbers.java
src/terminal/sandbox/misc/: bazeltest.bazel
src/terminal/sandbox/shell/bash/: color_test.sh  inlay.sh  interactive_script.sh  rainbow.sh
src/terminal/sandbox/shell/zsh/: color_test.txt
src/terminal/shell/bash/: rainbow.sh  random_emoji.sh  snake.sh  synchronized_output_copy.sh  test-OS8-links.sh
src/terminal/shell/powershell/: color_test.ps1  inlay.ps1  powershell_banner.ps1
src/terminal/test-data/: a_file_with_ling_line.txt  commands_for_testing_completion.sh  print_date.py  shell_commands.txt  symbols.txt  test_hyperlinks.txt  test_stylelint_relative_paths.css  url_test_links.txt  中文.txt
src/text/search/: DrawDot.java
test/: MainTest.java
